# tpm4720-keylime

./: .gitignore  CHANGELOG  LICENSE  README.md
libtpm/: AUTHORS  Makefile.am  README  autogen  autogen-mac  comp-chardev.sh  comp-serialp.sh  comp-sockets.sh  comp-unixio.sh  configure.in
libtpm/lib/: Makefile.am  deepquote.h  hmac.c  hmac.h  keys.c  makefile.mak  pcrs.c  tpm_constants.h  tpm_structures.h  tpmfunc.h  tpmutil.c  tpmutil_sock.c
libtpm/utils/: Makefile.am  activateidentity.c  bindfile.c  calcfuturepcr.c  certifykey.c  certifyselftest.c  checkdeepquote.c  checkquote.c  checkquote2.c  chgauth.c  chgtpmauth.c  clearown.c  cmk_approvema.c  cmk_createkey.c  cmk_createticket.c  cmk_loadmigrationblob.c  cmk_migrate.c  cmk_setrestrictions.c  counter_calc_incr.c  counter_create.c  counter_increment.c  counter_read.c  counter_release.c  createek.c  createkey.c  createkeydelegation.c  createownerdelegation.c  createrevek.c  deepquote.c  delegatemanage.c  delegatereadtable.c  dirread.c  dirwrite.c  disableforceclear.c  disableownerclear.c  disablepubek.c  dumpkey.c  enableaudit.c  encaik.c  evictkey.c  (+80 more)
libtpm/utils/modules/: test_auditing  test_basic  test_binding  test_capability  test_certificates  test_changeauth  test_constants  test_context  test_counters  test_createkeys  test_delegation  test_eviction  test_identity  test_maintenance  test_migration  test_misc  test_nvram  test_ownership  test_pcr  test_quote  test_random  test_seal  test_selftest  test_sha  test_signing  test_ticks  test_transport
scripts/: clean_rebuild  config.env  init_tpm_server  install-centos.sh  install-fedora-28.sh  install-mac.sh  install.sh  make_chardev_package.sh  make_package.sh  tpm_serverd
scripts/init-scripts/systemd/: after-install  tpmserver.service
scripts/init-scripts/sysv/: after-install  tpm_server-default  tpm_server-init
scripts/init-scripts/upstart/: after-install  tpmbios.conf  tpmctl  tpmserver.conf
tpm/: AUTHORS  INSTALL  PORTING  README  STATUS  makefile-common  makefile-en-ac  makefile-freebl  makefile-freebl-ts  makefile-tpm  makefile-ts  makefile-ts.mak  makefile.mak  tpm_admin.c  tpm_admin.h  tpm_audit.c  tpm_audit.h  tpm_auth.c  tpm_auth.h  tpm_commands.h  tpm_constants.h  tpm_counter.c  tpm_counter.h  tpm_crypto.c  tpm_crypto.h  tpm_crypto_freebl.c  tpm_cryptoh.c  tpm_cryptoh.h  tpm_daa.c  tpm_daa.h  tpm_debug.c  tpm_debug.h  tpm_delegate.c  tpm_delegate.h  tpm_digest.c  tpm_digest.h  tpm_error.c  tpm_error.h  tpm_global.c  tpm_global.h  (+58 more)
tpm_proxy/linux/: Makefile  tpm_proxy.c
tpm_proxy/win7/: makefile.mak  tpm_proxy.c
tpm_proxy/windows/: makefile.mak  tpm_proxy.c
